add seme slide to presentation

--- a/presentations/final.tex
+++ b/presentations/final.tex
@@ -43,18 +43,38 @@
 \end{frame}
 
 \section{Cíle}
-\begin{frame}{Cíl}
-       
+\begin{frame}{Cíle}
+\begin{itemize}
+        \item[•] Analýza dat
+		\item[•] Návrh a implementace datového skladu
+		\item[•] Vytvoření dashboardu pro prezentaci dat
+		\item[•] Zodpovězení business otázek
+		\end{itemize}
+\begin{columns}[c]
+    \column{5cm}
+    \column{10cm}
+ \end{columns}   
+      
 \end{frame}
 
-\section{Motivace}
-\begin{frame}{Motivace}
-		
+\section{Návrh a implementace}
+\begin{frame}{Návrh a implementace}
+		\begin{columns}[c]
+    \column{8cm}
+    \begin{itemize}
+        \item[•] Analýza dat
+		\item[•] Návrh a implementace datového skladu
+		\item[•] Vytvoření dashboardu pro prezentaci dat
+		\item[•] Zodpovězení business otázek
+		\end{itemize}
+    \column{7cm}
+    \includegraphics[scale=0.58]{img/DW}
+ \end{columns}   
 \end{frame}
 
 
-\section{pojmy}
-\begin{frame}{State of the art}
+\section{dashboard}
+\begin{frame}{Dashboard}
 
 \begin{columns}[c]
     \column{5cm}
