--- a/presentation/final.tex
+++ b/presentation/final.tex
@@ -28,11 +28,16 @@
   \vskip0pt%
 }
 \makeatother
-
+\newcommand\FacultyAndUniversityAbbr{FIT CTU}
+\newcommand\Department{}
+\newcommand\Faculty{Fakulta informačních technologií}
+\newcommand\University{České vysoké učení technické v Praze}
 
 \title{Semestrální práce z MI-EDW}
 \subtitle{Educational Process Mining (EPM)}
 \author{Ladislav Martínek a Richard Werner}
+\titlegraphic{\includegraphics[width=1.5cm]{img/LogoCVUT.pdf}}
+\institute[\FacultyAndUniversityAbbr]{\Department\\ \Faculty\\ \University}
 \date {}
 
 \begin{document}
